<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/hoheading"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="250dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/eventbtn"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/evebtn" />

        <Button
            android:id="@+id/checklistbtn"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:text="@string/chkbtn" />

        <Button
            android:id="@+id/guestbtn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/guebtn" />

        <Button
            android:id="@+id/schedulebtn"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:text="@string/schbtn" />

        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>