<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventActivity">

    <TextView
        android:id="@+id/addEvent"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="155dp"
        android:layout_marginRight="288dp"
        android:text="@string/aehedaing"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="34dp"
        android:layout_height="38dp"
        android:layout_alignTop="@id/addEvent"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        app:srcCompat="@drawable/done" />

    <EditText
        android:id="@+id/ename"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/addEvent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/ehname"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etype"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ename"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/ehtype"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/evenue"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etype"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/ehvenue"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edate"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/evenue"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/ehdate"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/eguests"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edate"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/ehguests"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/efood"
        android:layout_width="wrap_content"
        android:layout_height="261dp"
        android:layout_below="@+id/eguests"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/ehfood"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="20sp"/>
</RelativeLayout>